--- a/src/styles/components/Forecast.scss
+++ b/src/styles/components/Forecast.scss
@@ -8,6 +8,8 @@
     display: flex;
     align-items: center;
     overflow: hidden;
+    -webkit-overflow-scrolling: touch;
+    scroll-snap-type: x mandatory;
     margin-top: 0.5rem;
     padding-top: 1.5rem;
 
@@ -18,6 +20,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+
+      scroll-snap-align: start;
+      flex-shrink: 0;
 
       padding: 0.75rem;
       margin-right: 0.75rem;
