Refactor Forecast scss file.

--- a/src/styles/components/Forecast.scss
+++ b/src/styles/components/Forecast.scss
@@ -12,15 +12,9 @@
     overflow-x: auto;
     overflow: hidden;
     -webkit-overflow-scrolling: touch;
-    scrollbar-width: none; 
-    -ms-overflow-style: none;
-
+    scroll-snap-type: x mandatory;
     margin-top: 0.5rem;
     padding-top: 1.5rem;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
 
     .widget {
       position: relative;
@@ -36,7 +30,6 @@
       padding: 0.75rem;
       margin-right: 0.75rem;
 
-      flex: 0 0 auto;
       min-width: 115px;
 
       border: 1px solid var(--secondary-text-color);
@@ -67,12 +60,6 @@
           margin-left: 0.25rem;
         }
       }
-    }
-  }
-
-  @media (max-width: 768px) {
-    .forecast-container {
-      padding: 0 1rem;
     }
   }
 }
