--- a/src/styles/components/Forecast.scss
+++ b/src/styles/components/Forecast.scss
@@ -10,8 +10,10 @@
     align-items: center;
 
     overflow-x: auto;
-    overflow: hidden;
+    overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
     scroll-snap-type: x mandatory;
     margin-top: 0.5rem;
     padding-top: 1.5rem;
@@ -30,6 +32,7 @@
       padding: 0.75rem;
       margin-right: 0.75rem;
 
+      flex: 0 0 auto;
       min-width: 115px;
 
       border: 1px solid var(--secondary-text-color);
@@ -60,6 +63,12 @@
           margin-left: 0.25rem;
         }
       }
+    }
+  }
+
+  @media (max-width: 768px) {
+    .forecast-container {
+      padding: 0 1rem;
     }
   }
 }
