Refactor scroll-snap-type to none Forecast scss file.

--- a/src/styles/components/Forecast.scss
+++ b/src/styles/components/Forecast.scss
@@ -14,7 +14,7 @@
     -webkit-overflow-scrolling: touch;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    scroll-snap-type: x proximity;
+    scroll-snap-type: x none;
     margin-top: 0.5rem;
     padding-top: 1.5rem;
 
