--- a/src/styles/components/ScrollHide.scss
+++ b/src/styles/components/ScrollHide.scss
@@ -2,11 +2,17 @@
 
 .scroll-hide {
   overflow-x: auto;
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
+
   scrollbar-width: none;
   -ms-overflow-style: none;
 
   &::-webkit-scrollbar {
     display: none;
   }
+
+  display: flex;
+  flex-direction: row;
+  gap: 0.75rem;
 }
